fix navbarItem text cutoff again and add padding between sections

--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,10 @@ body {
   background-image: url(http://seattlehappytails.com/wp-content/uploads/2016/05/seattle_skyline_trans.png);
 }
 
+h1 {
+  font-size: 5vh;
+}
+
 ul {
   overflow: auto;
 }
