--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,4 @@
 #projectHeading {
-  font-size: 5vh;
   text-align: center;
 }
 
